--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,27 @@ body {
     height: 100vh;
 }
 
+p, h2 {
+    color: rgb(38, 215, 228);
+    font-family: 'Work Sans', sans-serif;
+}
+
+button {
+    border: 1px solid #c022ff;
+    font-size: 18px;
+    border-radius: .25rem;
+    color: rgb(108, 167, 172);
+    background-color: #29003a;
+    cursor: pointer;
+    transition: all 200ms ease-out;
+}
+
+button:hover {
+    color: #29003a;
+    border: 1px solid rgb(108, 167, 172);
+    background-color: rgb(108, 167, 172);
+}
+
 .container-main {
     display: grid;
     height: 100%;
@@ -35,7 +56,6 @@ body {
 .container-UI .container-btns button {
     height: 100%;
     width: 8rem;
-    cursor: pointer;
 }
 
 .container-UI .container-power-meter {
@@ -63,4 +83,51 @@ body {
     image-rendering: -moz-crisp-edges;
     image-rendering: -webkit-crisp-edges;
     image-rendering: crisp-edges;
+}
+
+#modal-backdrop {
+    pointer-events: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0, 0);
+    transition: all 400ms ease-out;
+}
+
+.modal {
+    opacity: 0;
+    width: 30vw;
+    height: 50vh;
+    background-color: black;
+    border: 2px solid #c022ff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    transition: opacity 400ms ease-out;
+}
+
+#modal-results-screen h2 {
+    font-size: 48px;
+    font-weight: 600;
+    margin: 0;
+    text-align: center;
+}
+
+#modal-results-screen p {
+    margin: 0;
+    font-size: 28px;
+    text-align: center;
+}
+
+#modal-results-screen button {
+    padding: 1rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
 }
