--- a/src/styles.css
+++ b/src/styles.css
@@ -138,3 +138,49 @@ button:hover {
     margin-left: .5rem;
     margin-right: .5rem;
 }
+
+#modal-change-stats {
+    width: 75vw;
+    height: 80vh;
+}
+
+#modal-change-stats h2 {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.container-stats {
+    display: grid;
+    height: 100%;
+    width: 100%;
+    grid-template-columns: auto 72.5%;
+    grid-template-rows: 15% auto;
+    justify-items: center;
+}
+
+.container-stats .container-stats-meter {
+    --border-radius: .5rem;
+
+    width: 100%;
+    height: 2rem;
+    background-color: white;
+    border-radius: var(--border-radius);
+}
+
+.container-stats .container-stats-meter #stats-meter {
+    background-color: limegreen;
+    display: inline-block;
+    height: 100%;
+    width: 0%;
+    border-bottom-left-radius: var(--border-radius);
+    border-top-left-radius: var(--border-radius);
+}
+
+.container-stats > div {
+    width: 100%;
+}
+
+#container-stats-canvas {
+    display: flex;
+    justify-content: center;
+}
